<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/food_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/placeholder_name"
                android:textColor="@color/item_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="4"
                android:paddingEnd="10dp"
                android:text="@string/placeholder_description"
                app:layout_constraintBottom_toTopOf="@id/product_price_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                tools:ignore="RtlSymmetry" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_price_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.24"
                app:layout_constraintWidth_percent="0.51">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/placeholder_price" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/break_line_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>