<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_bg_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/moscow"
                android:textColor="#222831"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="83dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/vector_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/down_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/qr_code_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/qr_code"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/product_categories_bar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_navigation_bar">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="184dp">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <HorizontalScrollView
                        android:id="@+id/promotions_bar"
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="16dp"
                                android:elevation="10dp"
                                app:cardCornerRadius="12dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/promotion_1"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/promotion_1" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:elevation="10dp"
                                app:cardCornerRadius="12dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/promotion_2"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/promotion_2" />

                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </HorizontalScrollView>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:scrollbars="none">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checkedButton="@id/pizza_button"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/pizza_button"
                            android:layout_width="96dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:text="@string/pizza"
                            android:textColor="@drawable/text_color"
                            android:textSize="13sp" />

                        <RadioButton
                            android:id="@+id/combo_button"
                            android:layout_width="96dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:text="@string/combo"
                            android:textColor="@drawable/text_color"
                            android:textSize="13sp" />

                        <RadioButton
                            android:id="@+id/desserts_button"
                            android:layout_width="96dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:text="@string/desserts"
                            android:textColor="@drawable/text_color"
                            android:textSize="13sp" />

                        <RadioButton
                            android:id="@+id/drinks_button"
                            android:layout_width="96dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:text="@string/drinks"
                            android:textColor="@drawable/text_color"
                            android:textSize="13sp" />

                        <RadioButton
                            android:id="@+id/other_button"
                            android:layout_width="96dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:text="@string/other"
                            android:textColor="@drawable/text_color"
                            android:textSize="13sp" />

                    </RadioGroup>
                </HorizontalScrollView>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:itemBackground="@color/bottom_nav_panel_color"
            app:itemIconTint="@color/bottom_nav_colored"
            app:itemTextColor="@color/bottom_nav_colored"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>